force-app/main/default/objects/encompass_By_EM__Liability__c/encompass_By_EM__Liability__c.object-meta.xml
<CustomObject>
    <label>Liability</label>
    <nameField>
        <displayFormat>Liability-{00000000}</displayFormat>
        <label>Liability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>