force-app/main/default/objects/encompass_By_EM__Liability__c/fields/encompass_By_EM__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Account_Number__c</fullName>
    <label>Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>