force-app/main/default/objects/encompass_By_EM__Liability__c/fields/encompass_By_EM__Account_Type__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Account_Type__c</fullName>
    <label>Account Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>