force-app/main/default/objects/encompass_By_EM__Liability__c/fields/encompass_By_EM__Account_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Account_Type_Other__c</fullName>
    <label>Account Type Other</label>
    <length>200</length>
    <type>Text</type>
</CustomField>