force-app/main/default/objects/encompass_By_EM__Liability__c/fields/encompass_By_EM__Balance__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Balance__c</fullName>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>