force-app/main/default/objects/encompass_By_EM__Liability__c/fields/encompass_By_EM__Creditor_Name__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Creditor_Name__c</fullName>
    <label>Creditor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>