force-app/main/default/objects/encompass_By_EM__Liability__c/fields/encompass_By_EM__Liability_External_Id__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Liability_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Liability External Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>