force-app/main/default/objects/encompass_By_EM__Liability__c/fields/encompass_By_EM__Liability_For__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Liability_For__c</fullName>
    <label>Liability For</label>
    <length>20</length>
    <type>Text</type>
</CustomField>