force-app/main/default/objects/encompass_By_EM__Liability__c/fields/encompass_By_EM__Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application</label>
    <referenceTo>encompass_By_EM__Loan_Application__c</referenceTo>
    <relationshipLabel>Liabilities</relationshipLabel>
    <relationshipName>Liabilities</relationshipName>
    <type>Lookup</type>
</CustomField>