force-app/main/default/objects/encompass_By_EM__Liability__c/fields/encompass_By_EM__Months_Left__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Months_Left__c</fullName>
    <label>Months Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>